modules/gdscript/tests/scripts/parser/errors/unexpected_indent_in_class_body.gd
extends Node

    func _ready():
        pass
